--- a/endless/array.html
+++ b/endless/array.html
@@ -15,6 +15,10 @@
         <button type="button" id="btnAddPerson">
             Add Person
         </button>
+        <button type="button" id="btnclearPerson">
+            Clear Person
+        </button>
+    
     </form>
 
     <div style="display: block; margin:10vh auto; max-width: 360px;">
@@ -24,6 +28,6 @@
         </ul>
     </div>
     
-    <script src="js/abstract.js"></script>
+    <script src="js/array.js"></script>
 </body>
 </html>
