Added jsLogin Validation

--- a/abstract2.html
+++ b/abstract2.html
@@ -22,6 +22,8 @@
                     <li>ssddffs</li>
                 </ul>
             </div>
+            
+        </di>
             <div id="flex-child2">
                 <div id="name_details">
                     <div class="feild">
@@ -82,7 +84,7 @@
                 </div>
                 
                 <div class="feild">
-                    <button type="button" id="btnSave" class="btn-green" style="float: right;">
+                    <button onclick="save()" type="button" id="btnSave" class="btn-green" style="float: right;">
                         Save Details
                     </button>
                     <div style="clear: both;"></div>
