--- a/happiness/task.html
+++ b/happiness/task.html
@@ -11,7 +11,7 @@
         
     
 <form method="POST">
-    <h3>REGISTRTION FORM</h3>
+    <h3>REGISTRATION FORM</h3>
     <hr>
  <div class="mail">
 <input id="mail" name="email" class="txtbox" placeholder="myemail" type="email" ><br>
