--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Tutorial</title>
+    <link rel="shortcut icon" href="dfgertere.ico" type="image/x-icon">
 </head>
 <body>
     <h1 title="click to color">colour my box</h1>
