--- a/endless/task.html
+++ b/endless/task.html
@@ -9,12 +9,15 @@
 <body>
     <div id="container">
         <form action="" method="get">
-            <input type="email" name="email" calss="inptext">
-            <button>Validate</button>
-            <input type="password" name="pass" calss="inptext">
-            <button class="pas">Show</button><button class="pas">Hide</button>
-            <input type="text" name="fulname" calss="inptext">
-            <button>Register</button>
+            <input type="email" name="email" id="email"calss="inptext">
+            <button type="button" name="btnv" id="validate">Validate</button>
+
+            <input type="password" name="pass" id="password_change" calss="inptext">
+            <button type="button" class="pas" id="btnshow">Show</button>
+            <button type="button" class="pas" id="btnhide">Hide</button>
+
+            <input type="text" name="fulname" id="fname" calss="inptext">
+            <button type="button" name="reg" id="btnreg" >Register</button>
         </form>
 
     </div>
