--- a/happiness/task2.html
+++ b/happiness/task2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/task2.css">
 </head>
 <body>
-    <div id="contain">
+    <div id="contain" id="main_cont">
 <form method="POST">
         <div>
             <h3>SIGN IN/REGISTRATION</h3> 
