--- a/template2.html
+++ b/template2.html
@@ -40,7 +40,7 @@
                     <i class="fa fa-bars"></i>
                 </div>
             </div>
-            <ul id="menu" class="openNav">
+            <ul id="menu">
                 <li>
                     <a href="#">
                         <i class="fa fa-home"></i>
