--- a/template2.html
+++ b/template2.html
@@ -42,31 +42,31 @@
             </div>
             <ul id="menu">
                 <li>
-                    <a href="#">
+                    <a href="#" id="home">
                         <i class="fa fa-home"></i>
                         Home
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" id="dashboard">
                         <i class="fa fa-tachometer-alt"></i>
                         Dashboard
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" id="services">
                         <i class="fa fa-layer-group"></i>
                         Services
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" id="contact">
                         <i class="fa fa-map-pin"></i>
                         Contact
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" id="faq">
                         <i class="fa fa-question"></i>
                         FAQ
                     </a>
@@ -75,7 +75,7 @@
         </div>
     </nav>
 
-    <div id="banner">
+    <div id="pages">
 
     </div>
     
