done with my mobile responsiveness on my assignmt

--- a/endless/assignment1.html
+++ b/endless/assignment1.html
@@ -15,6 +15,7 @@
             <i class="fa fa-graduation-cap"></i>
             <b id="logo">ACADEMICS</b>
         </aside>
+        <i id="bars" class="fa fa-bars"></i>
         <aside id="center">
             <a href="#">HOME</a>
             <a href="#">PAGES</a>
@@ -23,10 +24,11 @@
             <a href="#">NEWS</a>
             <a href="#">GALLERY</a>
             <a href="#">CONTACT</a>
+            <aside id="right">
+                <a href="#">APPLY NOW</a>
+            </aside>
         </aside>
-        <aside id="right">
-            <a href="#">APPLY NOW</a>
-        </aside>
+       
     </header>
     <div id="container">
         <div id="sub_b">
@@ -68,6 +70,6 @@
         </div>
 
     </div>
-    
+    <script src="js/assignment1.js"></script>
 </body>
 </html>
