Added Ajax Request Scripts to the application

--- a/template2.html
+++ b/template2.html
@@ -71,6 +71,12 @@
                         FAQ
                     </a>
                 </li>
+                <li>
+                    <a href="#" id="users">
+                        <i class="fa fa-users"></i>
+                        Users
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
