today is thursday

--- a/Emeka/Practice1/index.html
+++ b/Emeka/Practice1/index.html
@@ -12,9 +12,9 @@
       <img id="ImageT" src="Images/female.png" alt="">
     </div>
     <div>
-        <button class="male">Male</button>
-        <button class="female">Male</button>
+        <button onclick="male" class="male">Male</button>
+        <button onclick="female" class="female">Female</button>
     </div>
-    
+    <script src="javascript.js"></script>
 </body>
 </html>
