--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,7 +2,7 @@
     <div id="page_title">
         <strong>
             <i class="fa fa-phone-alt fa-1x"></i>
-            Our Contact
+            Our Contact dfghjkl;'\'
         </strong>
     </div>
 
